--- a/frontend/src/assets/components/chatbot/index.css
+++ b/frontend/src/assets/components/chatbot/index.css
@@ -1,8 +1,22 @@
-/* Chatbot Container */
 .chatbot-container {
     position: fixed; 
     bottom: 20px; 
-    right: 50px; 
+    right: 50px;
     width: 25%; 
+    height: 500px; 
+    background-color: white;
+    border-radius: 10px;
+    box-shadow: -5px 0px 10px grey;
+    display: flex;
+    flex-direction: column;
     z-index: 1000; 
+    transition: all 0.3s ease; 
+  }
+
+  .chatbot-container.expanded {
+    width: 100%; 
+    height: 100vh; 
+    bottom: 0;
+    left: 0;
+    border-radius: 0; 
   }
